Remove quick search limit + fix VRC Icon stretch
useful when using memos for tagging

--- a/html/src/app.scss
+++ b/html/src/app.scss
@@ -283,7 +283,7 @@ a {
 }
 
 .x-friend-item > img.avatar {
-    width: 50px;
+    width: unset;
     height: 37.5px;
     margin-right: 0;
     margin-left: 5px;
